--- a/style.css
+++ b/style.css
@@ -1107,6 +1107,9 @@
       font-size: 95%;
       margin-left: 0;
       margin-right: 0;
+      background-color: var(--fundo-corpo);
+      overscroll-behavior: none;
+      overflow-x: hidden;
     }
   
     .limite {
@@ -1135,12 +1138,13 @@
   
     .faixa-rolando {
       margin-bottom: 0.22rem;
+      margin-top: 4rem;
       font-size: 0.72rem;
       max-width: 100vw;
       overflow-x: hidden;
     }
     .conteudo-rolando span {
-      font-size: 0.61rem;
+      font-size: 1.01rem;
       padding-right: 0.3rem;
     }
   
@@ -1148,7 +1152,7 @@
       font-size: 2rem;
       line-height: 1.16;
       margin-bottom: 0.85rem;
-      margin-top: 2.5rem;
+      margin-top: 1.5rem;
       word-break: break-word;
       max-width: 90%;
     }
